Refactor index.html for improved layout and functionality
Refactor HTML structure, update labels and input fields, and enhance script functionality.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+        <!doctype html>
 <html lang="pt-BR">
 <head>
 <meta charset="utf-8" />
@@ -25,16 +25,11 @@
   th{background:#fbfdff;font-weight:700}
   .profit{background:#eaffef}
   .loss{background:#fff0f0}
-  .center{text-align:center}
-  .muted{color:#6b7a8a;font-size:13px}
-  .small-note{font-size:12px;color:#6b7a8a;margin-top:6px}
-  .controls{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}
-  .flex-right{display:flex;justify-content:flex-end;gap:8px}
-  @media(max-width:720px){.row{flex-direction:column}.flex-right{justify-content:flex-start}}
+  .small-note{font-size:12px;color:#6b7a8a;margin-top:4px}
 </style>
 </head>
 <body>
-<div class="container" role="main">
+<div class="container">
   <h1>MX$</h1>
 
   <!-- SALDO -->
@@ -46,7 +41,7 @@
     <div class="col small">
       <label for="saldoAtual">Saldo atual (R$)</label>
       <input id="saldoAtual" type="text" readonly />
-      <div class="small-note">Saldo = saldo inicial + histórico de lucro/prejuízo</div>
+      <div class="small-note">Saldo = inicial + histórico</div>
     </div>
     <div class="col" style="flex:2">
       <label>Histórico acumulado (R$)</label>
@@ -56,292 +51,199 @@
 
   <!-- TIMES -->
   <div class="row">
-    <div class="col">
-      <label for="timeA">Time A</label>
-      <input id="timeA" type="text" placeholder="Nome do time A (opcional)"/>
-    </div>
-    <div class="col">
-      <label for="timeB">Time B</label>
-      <input id="timeB" type="text" placeholder="Nome do time B (opcional)"/>
-    </div>
+    <div class="col"><label>Time A</label><input id="timeA" type="text" placeholder="Nome do time A"/></div>
+    <div class="col"><label>Time B</label><input id="timeB" type="text" placeholder="Nome do time B"/></div>
   </div>
 
   <!-- ODDS -->
   <div class="row">
+    <div class="col small"><label>Odd 1</label><input id="oddA" type="number" step="0.01" min="1"/></div>
+    <div class="col small"><label>Odd 2</label><input id="oddB" type="number" step="0.01" min="1"/></div>
+    <div class="col small"><label>Valor total a apostar (R$)</label><input id="valorTotal" type="number" step="0.01" min="0" /></div>
+    <div class="col small"><label>Quantas apostas perderam?</label><input id="qtdPerdidas" type="number" step="1" min="0" max="2" value="0"/><div class="small-note">0, 1 ou 2</div></div>
+  </div>
+
+  <!-- MULTIPLICADORES -->
+  <div class="row" style="align-items:end; border-top:1px solid #eef2f9; padding-top:10px; margin-top:12px;">
     <div class="col small">
-      <label for="oddA">Odd 1</label>
-      <input id="oddA" type="number" step="0.01" min="1" placeholder="ex: 1.57"/>
+      <label for="mult2Perdas">× 2 perdas</label>
+      <input id="mult2Perdas" type="number" step="0.01" min="0" value="1.00"/>
+      <div class="small-note">Próxima aposta = valor × este fator</div>
     </div>
     <div class="col small">
-      <label for="oddB">Odd 2</label>
-      <input id="oddB" type="number" step="0.01" min="1" placeholder="ex: 1.62"/>
+      <label for="mult1Perda">× 1 perda</label>
+      <input id="mult1Perda" type="number" step="0.01" min="0" value="1.00"/>
+      <div class="small-note">Próxima aposta = valor × este fator</div>
     </div>
     <div class="col small">
-      <label for="valorTotal">Valor total a apostar (R$)</label>
-      <input id="valorTotal" type="number" step="0.01" min="0" />
-    </div>
-    <div class="col small">
-      <label for="qtdPerdidas">Quantas apostas perderam?</label>
-      <input id="qtdPerdidas" type="number" step="1" min="0" max="2" value="0" />
-      <div class="small-note">Use 0, 1 ou 2 antes de "Aposta concluída"</div>
+      <label for="mult2Vitorias">× 2 acertos (última vitória)</label>
+      <input id="mult2Vitorias" type="number" step="0.01" min="0" value="1.00"/>
+      <div class="small-note">Próxima aposta = valor da última aposta vencedora × este fator</div>
     </div>
   </div>
 
-  <!-- BOTOES DE AÇÃO -->
+  <!-- BOTÕES -->
   <div class="row">
-    <div class="controls">
-      <button id="btnCalcular" class="btn">Calcular distribuição</button>
-      <button id="btnConcluir" class="btn secondary">Aposta concluída</button>
-      <button id="btnResetHist" class="btn danger">Resetar histórico</button>
-      <button id="btnApagarUlt" class="btn secondary">Apagar última aposta</button>
-    </div>
+    <button id="btnCalcular" class="btn">Calcular distribuição</button>
+    <button id="btnConcluir" class="btn secondary">Aposta concluída</button>
+    <button id="btnApagarUlt" class="btn secondary">Apagar última</button>
+    <button id="btnResetHist" class="btn danger">Resetar histórico</button>
   </div>
 
   <!-- RESULTADOS -->
-  <div class="row">
-    <div class="output" style="width:100%">
-      <div class="summary" id="resultArea">
-        <div class="card">
-          <strong>Distribuição</strong>
-          <div id="distInfo" class="muted">Nenhum cálculo executado ainda.</div>
-        </div>
-        <div class="card">
-          <strong>Se apenas 1 acerta</strong>
-          <div id="oneWin" class="muted">—</div>
-        </div>
-        <div class="card">
-          <strong>Se ambas acertam</strong>
-          <div id="bothWin" class="muted">—</div>
-        </div>
+  <div class="output">
+    <div class="summary">
+      <div class="card">
+        <strong>Distribuição</strong>
+        <div id="distInfo" class="small-note">Nenhum cálculo ainda.</div>
+      </div>
+      <div class="card">
+        <strong>Se 1 acerta</strong>
+        <div id="oneWin" class="small-note">—</div>
+      </div>
+      <div class="card">
+        <strong>Se 2 acertam</strong>
+        <div id="bothWin" class="small-note">—</div>
       </div>
     </div>
   </div>
 
   <!-- HISTÓRICO -->
-  <div class="row">
-    <div style="width:100%">
-      <h3 style="margin:10px 0 6px">Histórico de apostas</h3>
-      <div class="small-note">Cada linha: nº | data | valor apostado | resultado (R$) | % em relação ao total | (verde = ganho, vermelho = prejuízo)</div>
-      <table id="histTable" aria-live="polite">
-        <thead>
-          <tr><th>#</th><th>Data</th><th>Valor</th><th>Ganho/Prejuízo (R$)</th><th>% do total</th></tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
-  </div>
-
+  <h3>Histórico</h3>
+  <div class="small-note"># | data | valor apostado | lucro/prejuízo | %</div>
+  <table id="histTable">
+    <thead><tr><th>#</th><th>Data</th><th>Valor</th><th>Resultado</th><th>%</th></tr></thead>
+    <tbody></tbody>
+  </table>
 </div>
 
 <script>
-/* MX$ — script */
 (function(){
-  // Elements
-  const saldoInicialEl = document.getElementById('saldoInicial');
-  const saldoAtualEl = document.getElementById('saldoAtual');
-  const histAcumuladoEl = document.getElementById('histAcumulado');
-  const oddAEl = document.getElementById('oddA');
-  const oddBEl = document.getElementById('oddB');
-  const valorTotalEl = document.getElementById('valorTotal');
-  const btnCalcular = document.getElementById('btnCalcular');
-  const btnConcluir = document.getElementById('btnConcluir');
-  const btnResetHist = document.getElementById('btnResetHist');
-  const btnApagarUlt = document.getElementById('btnApagarUlt');
-  const distInfo = document.getElementById('distInfo');
-  const oneWin = document.getElementById('oneWin');
-  const bothWin = document.getElementById('bothWin');
-  const histTbody = document.querySelector('#histTable tbody');
-  const qtdPerdidasEl = document.getElementById('qtdPerdidas');
+  const saldoInicialEl=document.getElementById('saldoInicial');
+  const saldoAtualEl=document.getElementById('saldoAtual');
+  const histAcumuladoEl=document.getElementById('histAcumulado');
+  const oddAEl=document.getElementById('oddA');
+  const oddBEl=document.getElementById('oddB');
+  const valorTotalEl=document.getElementById('valorTotal');
+  const qtdPerdidasEl=document.getElementById('qtdPerdidas');
+  const distInfo=document.getElementById('distInfo');
+  const oneWin=document.getElementById('oneWin');
+  const bothWin=document.getElementById('bothWin');
+  const histTbody=document.querySelector('#histTable tbody');
+  const mult2Perdas=document.getElementById('mult2Perdas');
+  const mult1Perda=document.getElementById('mult1Perda');
+  const mult2Vitorias=document.getElementById('mult2Vitorias');
 
-  // LocalStorage keys
-  const KEY_SALDO = 'mx_saldoInicial';
-  const KEY_HISTORY = 'mx_history';
+  const KEY_SALDO='mx_saldo';
+  const KEY_HIST='mx_hist';
+  const KEY_MULT='mx_mults';
+  const KEY_LAST_WIN='mx_lastwin';
 
-  // State
-  let history = []; // array of {date, valor, resultado, percent}
-  let saldoInicial = 0;
+  let saldoInicial=0, history=[], mults={p2:1,p1:1,v2:1}, ultimaApostaVencedora=0;
 
-  // Utility
-  function fmtMoney(v){ return Number(v).toLocaleString('pt-BR',{minimumFractionDigits:2,maximumFractionDigits:2}); }
-  function nowDate(){ const d=new Date(); return d.toLocaleString('pt-BR'); }
-
-  // Load from localStorage
-  function load(){
-    const s = localStorage.getItem(KEY_SALDO);
-    saldoInicial = s ? parseFloat(s) : 0;
-    const h = localStorage.getItem(KEY_HISTORY);
-    history = h ? JSON.parse(h) : [];
-    renderAll();
-  }
+  const fmt=v=>Number(v).toLocaleString('pt-BR',{minimumFractionDigits:2,maximumFractionDigits:2});
+  const now=()=>new Date().toLocaleString('pt-BR');
 
   function save(){
-    localStorage.setItem(KEY_SALDO, String(saldoInicial));
-    localStorage.setItem(KEY_HISTORY, JSON.stringify(history));
+    localStorage.setItem(KEY_SALDO,saldoInicial);
+    localStorage.setItem(KEY_HIST,JSON.stringify(history));
+    localStorage.setItem(KEY_MULT,JSON.stringify(mults));
+    localStorage.setItem(KEY_LAST_WIN,ultimaApostaVencedora);
   }
 
-  // Render history table and saldo
-  function renderAll(){
-    // Fill inputs
-    saldoInicialEl.value = saldoInicial ? saldoInicial : '';
-    // Compute accumulated profit
-    const acum = history.reduce((s,it)=> s + Number(it.resultado),0);
-    histAcumuladoEl.value = 'R$ ' + fmtMoney(acum);
-    saldoAtualEl.value = 'R$ ' + fmtMoney((saldoInicial||0) + acum);
+  function load(){
+    saldoInicial=parseFloat(localStorage.getItem(KEY_SALDO))||0;
+    history=JSON.parse(localStorage.getItem(KEY_HIST)||'[]');
+    mults=JSON.parse(localStorage.getItem(KEY_MULT)||'{"p2":1,"p1":1,"v2":1}');
+    ultimaApostaVencedora=parseFloat(localStorage.getItem(KEY_LAST_WIN))||0;
+    saldoInicialEl.value=saldoInicial;
+    mult2Perdas.value=mults.p2;
+    mult1Perda.value=mults.p1;
+    mult2Vitorias.value=mults.v2;
+    render();
+  }
 
-    // Render history rows
-    histTbody.innerHTML = '';
-    history.forEach((it, idx) => {
-      const tr = document.createElement('tr');
-      tr.className = Number(it.resultado) >= 0 ? 'profit' : 'loss';
-      const num = document.createElement('td'); num.textContent = idx+1;
-      const dt = document.createElement('td'); dt.textContent = it.date;
-      const val = document.createElement('td'); val.textContent = 'R$ ' + fmtMoney(it.valor);
-      const res = document.createElement('td'); res.textContent = (Number(it.resultado) >=0 ? '+' : '') + 'R$ ' + fmtMoney(it.resultado);
-      const pc = document.createElement('td'); pc.textContent = (Number(it.percent) >=0 ? '+' : '') + Number(it.percent).toFixed(2) + '%';
-      tr.appendChild(num); tr.appendChild(dt); tr.appendChild(val); tr.appendChild(res); tr.appendChild(pc);
+  function render(){
+    const totalHist=history.reduce((s,i)=>s+i.resultado,0);
+    histAcumuladoEl.value='R$ '+fmt(totalHist);
+    saldoAtualEl.value='R$ '+fmt(saldoInicial+totalHist);
+    histTbody.innerHTML='';
+    history.forEach((it,i)=>{
+      const tr=document.createElement('tr');
+      tr.className=it.resultado>=0?'profit':'loss';
+      tr.innerHTML=`<td>${i+1}</td><td>${it.data}</td><td>R$ ${fmt(it.valor)}</td>
+      <td>${it.resultado>=0?'+':'-'}R$ ${fmt(Math.abs(it.resultado))}</td>
+      <td>${it.percent>=0?'+':'-'}${Math.abs(it.percent).toFixed(2)}%</td>`;
       histTbody.appendChild(tr);
     });
   }
 
-  // When user changes saldo inicial: save
-  saldoInicialEl.addEventListener('change', () => {
-    const v = parseFloat(saldoInicialEl.value);
-    saldoInicial = isFinite(v) ? v : 0;
-    save();
-    renderAll();
+  saldoInicialEl.addEventListener('change',()=>{saldoInicial=parseFloat(saldoInicialEl.value)||0;save();render();});
+  [mult2Perdas,mult1Perda,mult2Vitorias].forEach(el=>{
+    el.addEventListener('change',()=>{
+      mults.p2=parseFloat(mult2Perdas.value)||1;
+      mults.p1=parseFloat(mult1Perda.value)||1;
+      mults.v2=parseFloat(mult2Vitorias.value)||1;
+      save();
+    });
   });
 
-  // Calculation function (two odds)
-  function calcularDistribuicao(){
-    const o1 = parseFloat(oddAEl.value);
-    const o2 = parseFloat(oddBEl.value);
-    const T = parseFloat(valorTotalEl.value);
-    if(!(o1>0 && o2>0 && T>0)){
-      alert('Preencha corretamente as odds e o valor total (maior que zero).');
-      return null;
-    }
-    // inversos
-    const inv1 = 1 / o1;
-    const inv2 = 1 / o2;
-    const somaInv = inv1 + inv2;
-    // stakes
-    const A1 = (T / o1) / somaInv;
-    const A2 = (T / o2) / somaInv;
-    // guaranteed equal return R (se apenas 1 acerta)
-    const R = T / somaInv; // este é o retorno (inclui stake)
-    // returns
-    const retOne = R; // retorno se apenas 1 acerta
-    const profitOne = retOne - T;
-    // se as duas acertarem:
-    const retBoth = (A1 * o1) + (A2 * o2); // normalmente = R + R = 2R
-    const profitBoth = retBoth - T;
-    // percentages
-    const pctOne = (profitOne / T) * 100;
-    const pctBoth = (profitBoth / T) * 100;
-    // Round sensible
-    function r(v){ return Math.round(v*100)/100;}
-    const result = {
-      A1: r(A1),
-      A2: r(A2),
-      R: r(R),
-      retOne: r(retOne),
-      profitOne: r(profitOne),
-      pctOne: r(pctOne),
-      retBoth: r(retBoth),
-      profitBoth: r(profitBoth),
-      pctBoth: r(pctBoth),
-      T: r(T),
-      o1, o2
-    };
-    return result;
+  function calcular(){
+    const o1=parseFloat(oddAEl.value), o2=parseFloat(oddBEl.value), T=parseFloat(valorTotalEl.value);
+    if(!(o1>0&&o2>0&&T>0)){alert('Preencha odds e valor total.');return null;}
+    const inv1=1/o1, inv2=1/o2, sumInv=inv1+inv2;
+    const A1=(T/o1)/sumInv, A2=(T/o2)/sumInv, R=T/sumInv;
+    const ret1=R, profit1=ret1-T, retBoth=A1*o1+A2*o2, profitBoth=retBoth-T;
+    return {o1,o2,T,A1,A2,R,profit1,profitBoth};
   }
 
-  // Show calculation results in UI
-  btnCalcular.addEventListener('click', ()=>{
-    const res = calcularDistribuicao();
-    if(!res) return;
-    distInfo.innerHTML = `
-      <div><strong>Stake 1:</strong> R$ ${fmtMoney(res.A1)} (Odd ${res.o1})</div>
-      <div><strong>Stake 2:</strong> R$ ${fmtMoney(res.A2)} (Odd ${res.o2})</div>
-      <div class="small-note">Retorno igual esperado ao acertar apenas 1 aposta: R$ ${fmtMoney(res.R)}</div>
-    `;
-    oneWin.innerHTML = `
-      <div><strong>Retorno:</strong> R$ ${fmtMoney(res.retOne)}</div>
-      <div><strong>Lucro/Prejuízo:</strong> ${res.profitOne >=0 ? '+' : ''}R$ ${fmtMoney(res.profitOne)}</div>
-      <div class="muted"><strong>% sobre o total:</strong> ${res.pctOne.toFixed(2)}%</div>
-    `;
-    bothWin.innerHTML = `
-      <div><strong>Retorno total (ambas vencem):</strong> R$ ${fmtMoney(res.retBoth)}</div>
-      <div><strong>Lucro/Prejuízo:</strong> ${res.profitBoth >=0 ? '+' : ''}R$ ${fmtMoney(res.profitBoth)}</div>
-      <div class="muted"><strong>% sobre o total:</strong> ${res.pctBoth.toFixed(2)}%</div>
-    `;
-  });
-
-  // Concluir aposta: usa qtdPerdidas para definir resultado e adiciona ao histórico
-  btnConcluir.addEventListener('click', ()=>{
-    const res = calcularDistribuicao();
-    if(!res) return;
-    const lost = parseInt(qtdPerdidasEl.value,10);
-    if(isNaN(lost) || lost < 0 || lost > 2){
-      alert('Defina quantas apostas perderam: 0, 1 ou 2.');
-      return;
-    }
-    let resultado = 0;
-    // wins = 2 - lost
-    const wins = 2 - lost;
-    if(wins === 2){
-      resultado = res.profitBoth; // lucro se ambas acertarem
-    } else if(wins === 1){
-      resultado = res.profitOne; // lucro se apenas uma
-    } else {
-      resultado = -res.T; // perderam tudo
-    }
-
-    // push history entry
-    const entry = {
-      date: nowDate(),
-      valor: Number(res.T),
-      resultado: Number(Number(resultado).toFixed(2)),
-      percent: Number(((resultado / res.T) * 100).toFixed(2))
-    };
-    history.push(entry);
-
-    // Update saldo atual: saldoInicial stored separately; renderAll compute acum
-    save();
-    renderAll();
-
-    // clear fields (except saldo inicial)
-    oddAEl.value=''; oddBEl.value=''; valorTotalEl.value=''; qtdPerdidasEl.value='0';
-    distInfo.innerHTML = 'Nenhum cálculo executado ainda.';
-    oneWin.innerHTML = '—';
-    bothWin.innerHTML = '—';
-  });
-
-  // Reset history
-  btnResetHist.addEventListener('click', ()=>{
-    if(!confirm('Resetar histórico apagará todas as apostas salvas. Deseja continuar?')) return;
-    history = [];
-    save();
-    renderAll();
-  });
-
-  // Apagar última aposta
-  btnApagarUlt.addEventListener('click', ()=>{
-    if(history.length === 0) { alert('Histórico vazio.'); return; }
-    if(!confirm('Remover a última aposta registrada?')) return;
-    history.pop();
-    save();
-    renderAll();
-  });
-
-  // initial load
-  load();
-
-  // expose for debugging (optional)
-  window.mx = {
-    getState: ()=>({saldoInicial,history}),
-    clearAll: ()=>{ localStorage.removeItem(KEY_SALDO); localStorage.removeItem(KEY_HISTORY); saldoInicial=0; history=[]; renderAll(); }
+  document.getElementById('btnCalcular').onclick=()=>{
+    const r=calcular(); if(!r)return;
+    distInfo.innerHTML=`Stake 1: R$ ${fmt(r.A1)} (odd ${r.o1})<br>Stake 2: R$ ${fmt(r.A2)} (odd ${r.o2})`;
+    oneWin.innerHTML=`Lucro/Prejuízo: ${r.profit1>=0?'+':'-'}R$ ${fmt(Math.abs(r.profit1))}`;
+    bothWin.innerHTML=`Lucro/Prejuízo: ${r.profitBoth>=0?'+':'-'}R$ ${fmt(Math.abs(r.profitBoth))}`;
   };
+
+  document.getElementById('btnConcluir').onclick=()=>{
+    const r=calcular(); if(!r)return;
+    const lost=parseInt(qtdPerdidasEl.value)||0;
+    let result=0;
+    if(lost===2) result=-r.T;
+    if(lost===1) result=r.profit1;
+    if(lost===0) result=r.profitBoth;
+
+    // Atualiza ultima aposta vencedora
+    if(result>0) ultimaApostaVencedora=r.T;
+
+    const perc=(result/r.T)*100;
+    history.push({data:now(),valor:r.T,resultado:+result.toFixed(2),percent:+perc.toFixed(2)});
+    save();render();
+
+    // define próximo valorTotal com base no resultado
+    let novoValor=0;
+    if(lost===2) novoValor=r.T*mults.p2;
+    else if(lost===1) novoValor=r.T*mults.p1;
+    else if(lost===0) novoValor=ultimaApostaVencedora*mults.v2;
+
+    valorTotalEl.value=novoValor.toFixed(2);
+    oddAEl.value=''; oddBEl.value='';
+  };
+
+  document.getElementById('btnResetHist').onclick=()=>{
+    if(confirm('Apagar todo histórico?')){history=[];ultimaApostaVencedora=0;save();render();}
+  };
+  document.getElementById('btnApagarUlt').onclick=()=>{
+    if(history.length){
+      const last=history.pop();
+      if(last.resultado>0){ // se última vitória removida, atualizar ultimaApostaVencedora
+        const ultWin=history.slice().reverse().find(i=>i.resultado>0);
+        ultimaApostaVencedora=ultWin?ultWin.valor:0;
+      }
+      save();render();
+    }
+  };
+
+  load();
 })();
 </script>
 </body>
