--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>  
 <meta charset="utf-8" />  
 <meta name="viewport" content="width=device-width,initial-scale=1" />  
-<title>MX$ — Calculadora</title>  
+<title>MX$ — Calculadora</title> 
+  <!-- Ícones e favicon -->
+  <link rel="icon" href="1762965844618.jpg" type="image/jpeg">
+  <link rel="apple-touch-icon" href="1762965844618.jpg">
 <style>  
   :root{font-family:Inter,Segoe UI,Helvetica,Arial,sans-serif}  
   body{background:#f6f7fb;color:#111;margin:0;padding:24px;display:flex;justify-content:center}  
