--- a/index.html
+++ b/index.html
@@ -1,286 +1,199 @@
-              <!doctype html>
-<html lang="pt-BR">  
-<head>  
-<meta charset="utf-8" />  
-<meta name="viewport" content="width=device-width,initial-scale=1" />  
-<title>MX$ — Calculadora</title> 
-  <!-- Ícones e favicon -->
-  <link rel="icon" href="1762965844618.jpg" type="image/jpeg">
-  <link rel="apple-touch-icon" href="1762965844618.jpg">
-<style>  
-  :root{font-family:Inter,Segoe UI,Helvetica,Arial,sans-serif}  
-  body{background:#f6f7fb;color:#111;margin:0;padding:24px;display:flex;justify-content:center}  
-  .container{width:980px;max-width:96%;background:#fff;border-radius:12px;box-shadow:0 6px 30px rgba(20,25,40,0.08);padding:22px}  
-  h1{font-size:40px;margin:0 0 14px;color:#0b3b66}  
-  .row{display:flex;gap:12px;flex-wrap:wrap;margin-bottom:12px}  
-  label{font-size:13px;color:#334;display:block;margin-bottom:6px}  
-  input[type="text"],input[type="number"]{padding:10px 12px;border:1px solid #d7dde8;border-radius:8px;font-size:14px;width:100%;box-sizing:border-box}  
-  .col{flex:1;min-width:140px}  
-  .small{width:140px}  
-  .btn{background:#0b66a3;color:#fff;padding:10px 14px;border-radius:8px;border:0;cursor:pointer;font-weight:600}  
-  .btn.secondary{background:#e6eef7;color:#0b3b66}  
-  .btn.danger{background:#e24b4b}  
-  .output{background:#f3f6fb;padding:12px;border-radius:8px;border:1px solid #e8edf6}  
-  .summary{display:flex;gap:12px;flex-wrap:wrap;margin-top:8px}  
-  .card{flex:1;min-width:220px;padding:12px;border-radius:8px;background:#fff;border:1px solid #eef3fa}  
-  table{width:100%;border-collapse:collapse;margin-top:10px}  
-  th,td{padding:8px;border-bottom:1px solid #f0f3f8;text-align:left;font-size:13px}  
-  th{background:#fbfdff;font-weight:700}  
-  .profit{background:#eaffef}  
-  .loss{background:#fff0f0}  
-  .small-note{font-size:12px;color:#6b7a8a;margin-top:4px}  
-</style>  
-</head>  
-<body>  
-<div class="container">  
-  <h1>MX$</h1>  
+<!doctype html>
+<html lang="pt-BR">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>MX$</title>
+<style>
+  :root { font-family: Inter, Segoe UI, Helvetica, Arial, sans-serif; }
+  body { background:#f6f7fb; color:#111; margin:0; padding:0; }
+  h1 { text-align:center; font-size:2rem; margin:1rem 0; }
+  main { max-width:700px; margin:auto; background:#fff; padding:1.5rem; border-radius:16px; box-shadow:0 0 10px #ccc; }
+  label { display:block; margin-top:1rem; font-weight:600; }
+  input[type="number"], input[type="text"] {
+    width:100%; padding:0.5rem; font-size:1rem; border:1px solid #ccc; border-radius:8px;
+  }
+  .row { display:grid; grid-template-columns:1fr 1fr; gap:1rem; align-items:center; }
+  button {
+    width:100%; margin-top:1rem; padding:0.75rem;
+    font-size:1rem; background:#111; color:#fff;
+    border:none; border-radius:8px; cursor:pointer;
+  }
+  button:hover { background:#333; }
+  table { width:100%; border-collapse:collapse; margin-top:1rem; }
+  th, td { border-bottom:1px solid #ddd; padding:0.5rem; text-align:center; font-size:0.9rem; }
+  tr.win { background:#d4f8d4; }
+  tr.lose { background:#f9d0d0; }
+  #mults input { width:100%; text-align:center; }
+  #history { margin-top:1rem; max-height:300px; overflow:auto; }
+  #lostBox { display:flex; align-items:center; gap:0.5rem; margin-top:1rem; }
+  .row-buttons { display:grid; grid-template-columns:1fr; gap:1rem; margin-top:1rem; }
+</style>
+</head>
+<body>
+<h1>MX$</h1>
+<main>
+  <div class="row">
+    <div>
+      <label>Saldo inicial</label>
+      <input type="number" id="saldoInicial" step="0.01" />
+    </div>
+    <div>
+      <label>Saldo atual</label>
+      <input type="text" id="saldoAtual" readonly />
+    </div>
+  </div>
 
-  <!-- SALDO -->  
-  <div class="row" style="align-items:end">  
-    <div class="col small">  
-      <label for="saldoInicial">Saldo inicial (R$)</label>  
-      <input id="saldoInicial" type="number" step="0.01" min="0" />  
-    </div>  
-    <div class="col small">  
-      <label for="saldoAtual">Saldo atual (R$)</label>  
-      <input id="saldoAtual" type="text" readonly />  
-      <div class="small-note">Saldo = inicial + histórico</div>  
-    </div>  
-    <div class="col" style="flex:2">  
-      <label>Histórico acumulado (R$)</label>  
-      <input id="histAcumulado" type="text" readonly />  
-    </div>  
-  </div>  
+  <label>Odd da aposta</label>
+  <input type="number" id="oddA" step="0.01" />
 
-  <!-- TIMES -->  
-  <div class="row">  
-    <div class="col"><label>Time A</label><input id="timeA" type="text" placeholder="Nome do time A"/></div>  
-    <div class="col"><label>Time B</label><input id="timeB" type="text" placeholder="Nome do time B"/></div>  
-  </div>  
+  <label>Valor total da aposta</label>
+  <input type="number" id="valorTotal" step="0.01" />
 
-  <!-- ODDS -->  
-  <div class="row">  
-    <div class="col small"><label>Odd 1</label><input id="oddA" type="number" step="0.01" min="1"/></div>  
-    <div class="col small"><label>Odd 2</label><input id="oddB" type="number" step="0.01" min="1"/></div>  
-    <div class="col small"><label>Valor total a apostar (R$)</label><input id="valorTotal" type="number" step="0.01" min="0" /></div>  
-    <div class="col small"><label>Quantas apostas perderam?</label><input id="qtdPerdidas" type="number" step="1" min="0" max="2" value="0"/><div class="small-note">0, 1 ou 2</div></div>  
-  </div>  
+  <div id="mults" class="row">
+    <div>
+      <label>Multiplicador (aposta perdeu)</label>
+      <input type="number" id="multP1" step="0.01" />
+    </div>
+    <div>
+      <label>Multiplicador (aposta ganhou)</label>
+      <input type="number" id="multV2" step="0.01" />
+    </div>
+  </div>
 
-  <!-- APOSTA ÚNICA -->  
-  <div class="row" style="align-items:center; border-top:1px solid #eef2f9; padding-top:10px; margin-top:12px;">  
-    <div class="col small">  
-      <label><input type="checkbox" id="modoUnico" /> Usar aposta única (valor total em odd 1)</label>  
-    </div>  
-  </div>  
+  <div id="lostBox">
+    <input type="checkbox" id="chkPerdeu" />
+    <label for="chkPerdeu">Aposta perdeu</label>
+  </div>
 
-  <!-- MULTIPLICADORES -->  
-  <div class="row" style="align-items:end; border-top:1px solid #eef2f9; padding-top:10px; margin-top:12px;">  
-    <div class="col small">  
-      <label for="mult2Perdas">× 2 perdas</label>  
-      <input id="mult2Perdas" type="number" step="0.01" min="0" value="1.00"/>  
-    </div>  
-    <div class="col small">  
-      <label for="mult1Perda">× 1 perda</label>  
-      <input id="mult1Perda" type="number" step="0.01" min="0" value="1.00"/>  
-    </div>  
-    <div class="col small">  
-      <label for="mult2Vitorias">× 2 acertos</label>  
-      <input id="mult2Vitorias" type="number" step="0.01" min="0" value="1.00"/>  
-    </div>  
-  </div>  
+  <button id="btnCalcular">Calcular Retorno</button>
+  <button id="btnConcluir">Aposta concluída</button>
 
-  <!-- BOTÕES -->  
-  <div class="row">  
-    <button id="btnCalcular" class="btn">Calcular distribuição</button>  
-    <button id="btnConcluir" class="btn secondary">Aposta concluída</button>  
-    <button id="btnApagarUlt" class="btn secondary">Apagar última</button>  
-    <button id="btnResetHist" class="btn danger">Resetar histórico</button>  
-  </div>  
+  <div class="row-buttons">
+    <button id="btnResetarHistorico">Resetar histórico</button>
+  </div>
 
-  <!-- RESULTADOS -->  
-  <div class="output">  
-    <div class="summary">  
-      <div class="card">  
-        <strong>Distribuição</strong>  
-        <div id="distInfo" class="small-note">Nenhum cálculo ainda.</div>  
-      </div>  
-      <div class="card">  
-        <strong>Se 1 acerta</strong>  
-        <div id="oneWin" class="small-note">—</div>  
-      </div>  
-      <div class="card">  
-        <strong>Se 2 acertam</strong>  
-        <div id="bothWin" class="small-note">—</div>  
-      </div>  
-    </div>  
-  </div>  
+  <div id="resultado"></div>
+  <div id="history"></div>
+</main>
 
-  <!-- HISTÓRICO -->  
-  <h3>Histórico</h3>  
-  <div class="small-note"># | data | valor apostado | lucro/prejuízo | %</div>  
-  <table id="histTable">  
-    <thead><tr><th>#</th><th>Data</th><th>Valor</th><th>Resultado</th><th>%</th></tr></thead>  
-    <tbody></tbody>  
-  </table>  
-</div>  
+<script>
+const saldoInicialEl = document.getElementById('saldoInicial');
+const saldoAtualEl = document.getElementById('saldoAtual');
+const oddAEl = document.getElementById('oddA');
+const valorTotalEl = document.getElementById('valorTotal');
+const multP1El = document.getElementById('multP1');
+const multV2El = document.getElementById('multV2');
+const chkPerdeu = document.getElementById('chkPerdeu');
+const resultadoEl = document.getElementById('resultado');
+const historyEl = document.getElementById('history');
+const btnResetarHistorico = document.getElementById('btnResetarHistorico');
 
-<script>  
-(function(){  
-  const saldoInicialEl=document.getElementById('saldoInicial');  
-  const saldoAtualEl=document.getElementById('saldoAtual');  
-  const histAcumuladoEl=document.getElementById('histAcumulado');  
-  const oddAEl=document.getElementById('oddA');  
-  const oddBEl=document.getElementById('oddB');  
-  const valorTotalEl=document.getElementById('valorTotal');  
-  const qtdPerdidasEl=document.getElementById('qtdPerdidas');  
-  const distInfo=document.getElementById('distInfo');  
-  const oneWin=document.getElementById('oneWin');  
-  const bothWin=document.getElementById('bothWin');  
-  const histTbody=document.querySelector('#histTable tbody');  
-  const mult2Perdas=document.getElementById('mult2Perdas');  
-  const mult1Perda=document.getElementById('mult1Perda');  
-  const mult2Vitorias=document.getElementById('mult2Vitorias');  
-  const modoUnicoEl=document.getElementById('modoUnico');  
-  
-  const KEY_SALDO='mx_saldo';  
-  const KEY_HIST='mx_hist';  
-  const KEY_MULT='mx_mults';  
-  
-  let saldoInicial=0, history=[], mults={p2:1,p1:1,v2:1};  
-  
-  const fmt=v=>Number(v).toLocaleString('pt-BR',{minimumFractionDigits:2,maximumFractionDigits:2});  
-  const now=()=>new Date().toLocaleString('pt-BR');  
-  
-  function save(){  
-    localStorage.setItem(KEY_SALDO,saldoInicial);  
-    localStorage.setItem(KEY_HIST,JSON.stringify(history));  
-    localStorage.setItem(KEY_MULT,JSON.stringify(mults));  
-  }  
-  
-  function load(){  
-    saldoInicial=parseFloat(localStorage.getItem(KEY_SALDO))||0;  
-    history=JSON.parse(localStorage.getItem(KEY_HIST)||'[]');  
-    mults=JSON.parse(localStorage.getItem(KEY_MULT)||'{"p2":1,"p1":1,"v2":1}');  
-    saldoInicialEl.value=saldoInicial;  
-    mult2Perdas.value=mults.p2;  
-    mult1Perda.value=mults.p1;  
-    mult2Vitorias.value=mults.v2;  
-    render();  
-  }  
-  
-  function render(){  
-    const totalHist=history.reduce((s,i)=>s+i.resultado,0);  
-    histAcumuladoEl.value='R$ '+fmt(totalHist);  
-    saldoAtualEl.value='R$ '+fmt(saldoInicial+totalHist);  
-    histTbody.innerHTML='';  
-    history.forEach((it,i)=>{  
-      const tr=document.createElement('tr');  
-      tr.className=it.resultado>=0?'profit':'loss';  
-      tr.innerHTML=`<td>${i+1}</td><td>${it.data}</td><td>R$ ${fmt(it.valor)}</td>  
-      <td>${it.resultado>=0?'+':'-'}R$ ${fmt(Math.abs(it.resultado))}</td>  
-      <td>${it.percent>=0?'+':'-'}${Math.abs(it.percent).toFixed(2)}%</td>`;  
-      histTbody.appendChild(tr);  
-    });  
-  }  
-  
-  saldoInicialEl.addEventListener('change',()=>{saldoInicial=parseFloat(saldoInicialEl.value)||0;save();render();});  
-  [mult2Perdas,mult1Perda,mult2Vitorias].forEach(el=>{  
-    el.addEventListener('change',()=>{  
-      mults.p2=parseFloat(mult2Perdas.value)||1;  
-      mults.p1=parseFloat(mult1Perda.value)||1;  
-      mults.v2=parseFloat(mult2Vitorias.value)||1;  
-      save();  
-    });  
-  });  
-  
-  function calcular(){  
-    const o1=parseFloat(oddAEl.value);  
-    const o2=parseFloat(oddBEl.value);  
-    const T=parseFloat(valorTotalEl.value);  
-    const unico=modoUnicoEl.checked;  
+let saldoInicial = 0;
+let history = [];
+let mults = { p1: 2.0, v2: 1.2 };
 
-    if (unico) {  
-      if (!(o1>0 && T>0)) { alert('Preencha pelo menos a Odd 1 e o valor total.'); return null; }  
-      const A1=T, A2=0, R=A1*o1, profit1=R-A1;  
-      return {o1,o2:0,T,A1,A2,R,profit1,profitBoth:profit1,unico:true};  
-    }  
+function save() {
+  localStorage.setItem('mx$-saldoInicial', saldoInicial);
+  localStorage.setItem('mx$-history', JSON.stringify(history));
+  localStorage.setItem('mx$-mults', JSON.stringify(mults));
+}
 
-    if (!(o1>0&&o2>0&&T>0)){alert('Preencha ambas as odds e o valor total.');return null;}  
+function load() {
+  saldoInicial = parseFloat(localStorage.getItem('mx$-saldoInicial')) || 0;
+  history = JSON.parse(localStorage.getItem('mx$-history') || '[]');
+  mults = JSON.parse(localStorage.getItem('mx$-mults') || '{"p1":2.0,"v2":1.2}');
+  saldoInicialEl.value = saldoInicial.toFixed(2);
+  multP1El.value = mults.p1;
+  multV2El.value = mults.v2;
+  renderHistory();
+}
 
-    const inv1=1/o1, inv2=1/o2, sumInv=inv1+inv2;  
-    const A1=(T/o1)/sumInv, A2=(T/o2)/sumInv, R=T/sumInv;  
-    const ret1=R, profit1=ret1-T, retBoth=A1*o1+A2*o2, profitBoth=retBoth-T;  
-    return {o1,o2,T,A1,A2,R,profit1,profitBoth,unico:false};  
-  }  
-  
-  document.getElementById('btnCalcular').onclick=()=>{  
-    const r=calcular(); if(!r)return;  
-    if (r.unico) {  
-        distInfo.innerHTML=`Stake único: R$ ${fmt(r.A1)} (odd ${r.o1})`;  
-    } else {  
-        distInfo.innerHTML=`Stake 1: R$ ${fmt(r.A1)} (odd ${r.o1})<br>Stake 2: R$ ${fmt(r.A2)} (odd ${r.o2})`;  
-    }  
-    oneWin.innerHTML=`Lucro/Prejuízo: ${r.profit1>=0?'+':'-'}R$ ${fmt(Math.abs(r.profit1))}`;  
-    bothWin.innerHTML=`Lucro/Prejuízo: ${r.profitBoth>=0?'+':'-'}R$ ${fmt(Math.abs(r.profitBoth))}`;  
-  };  
+function renderHistory() {
+  let saldoAtual = saldoInicial;
+  let rows = history.map(h => {
+    saldoAtual += h.resultado;
+    const classe = h.resultado >= 0 ? 'win' : 'lose';
+    return `<tr class="${classe}">
+      <td>${h.data}</td>
+      <td>${h.valor.toFixed(2)}</td>
+      <td>${h.odd}</td>
+      <td>${h.resultado.toFixed(2)}</td>
+      <td>${saldoAtual.toFixed(2)}</td>
+    </tr>`;
+  }).join('');
+  historyEl.innerHTML = `<table>
+    <tr><th>Data</th><th>Valor</th><th>Odd</th><th>Resultado</th><th>Saldo</th></tr>
+    ${rows}
+  </table>`;
+  saldoAtualEl.value = saldoAtual.toFixed(2);
+}
 
-  document.getElementById('btnConcluir').onclick = () => {
-    const r = calcular(); 
-    if (!r) return;
+document.getElementById('btnCalcular').onclick = () => {
+  const odd = parseFloat(oddAEl.value);
+  const valor = parseFloat(valorTotalEl.value);
+  if (!odd || !valor) return alert('Preencha todos os campos');
+  const ganho = valor * odd - valor;
+  resultadoEl.innerHTML = `<p><b>Lucro em caso de acerto:</b> R$ ${ganho.toFixed(2)}</p>`;
+};
 
-    const lost = parseInt(qtdPerdidasEl.value) || 0;
-    let result = 0;
-    if (lost === 2) result = -r.T;
-    if (lost === 1) result = r.profit1;
-    if (lost === 0) result = r.profitBoth;
+document.getElementById('btnConcluir').onclick = () => {
+  const odd = parseFloat(oddAEl.value);
+  const valor = parseFloat(valorTotalEl.value);
+  if (!odd || !valor) return alert('Preencha os campos');
 
-    const perc = (result / r.T) * 100;
-    history.push({ data: now(), valor: r.T, resultado: +result.toFixed(2), percent: +perc.toFixed(2) });
-    save();
-    render();
+  const perdeu = chkPerdeu.checked;
+  const resultado = perdeu ? -valor : (valor * odd - valor);
 
-    // define multiplicador
-    let mult = 1;
-    if (lost === 2) mult = mults.p2;
-    else if (lost === 1) mult = mults.p1;
-    else mult = mults.v2;
+  history.push({
+    data: new Date().toLocaleString('pt-BR'),
+    odd, valor, resultado
+  });
 
-    // define valor base para próxima aposta
-    let baseValor = r.T; // padrão: última aposta
+  let mult = perdeu ? mults.p1 : mults.v2;
 
-    // condição especial: última vitória e penúltima derrota
-    if (history.length >= 2) {
-        const ultima = history[history.length - 1];
-        const penultima = history[history.length - 2];
-
-        if (ultima.resultado > 0 && penultima.resultado < 0) {
-            const ultimaVencedora = [...history]
-                .slice(0, history.length - 1)
-                .reverse()
-                .find(h => h.resultado > 0);
-            if (ultimaVencedora) {
-                baseValor = ultimaVencedora.valor;
-            } else {
-                baseValor = history[0].valor;
-            }
-        }
+  // 🔹 Implementação da lógica "última vitória e penúltima derrota"
+  let baseValor = valor;
+  if (history.length >= 2) {
+    const ultima = history[history.length - 1];
+    const penultima = history[history.length - 2];
+    if (ultima.resultado > 0 && penultima.resultado < 0) {
+      const ultimaVencedora = [...history]
+        .slice(0, history.length - 1)
+        .reverse()
+        .find(h => h.resultado > 0);
+      if (ultimaVencedora) {
+        baseValor = ultimaVencedora.valor;
+      } else {
+        baseValor = history[0].valor;
+      }
     }
+  }
 
-    valorTotalEl.value = (baseValor * mult).toFixed(2);
+  valorTotalEl.value = (baseValor * mult).toFixed(2);
 
-    oddAEl.value = '';
-    oddBEl.value = '';
-  };
+  // 🔸 Limpa campos após registrar aposta
+  oddAEl.value = '';
+  chkPerdeu.checked = false;
+  resultadoEl.innerHTML = '';
 
-  document.getElementById('btnResetHist').onclick=()=>{  
-    if(confirm('Apagar todo histórico?')){history=[];save();render();}  
-  };  
-  document.getElementById('btnApagarUlt').onclick=()=>{  
-    if(history.length){history.pop();save();render();}  
-  };  
-  
-  load();  
-})();  
-</script>  
-</body>  
+  renderHistory();
+  save();
+};
+
+btnResetarHistorico.onclick = () => {
+  if (confirm('Deseja realmente apagar todo o histórico?')) {
+    history = [];
+    renderHistory();
+    save();
+  }
+};
+
+saldoInicialEl.oninput = () => { saldoInicial = parseFloat(saldoInicialEl.value) || 0; save(); };
+multP1El.oninput = () => { mults.p1 = parseFloat(multP1El.value) || 1; save(); };
+multV2El.oninput = () => { mults.v2 = parseFloat(multV2El.value) || 1; save(); };
+
+load();
+</script>
+</body>
 </html>
